--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=appmvc;user=root;password="
   },
   "AllowedHosts": "*"
 }
